--- a/src/components/Body/Body.css
+++ b/src/components/Body/Body.css
@@ -1,67 +1,71 @@
 .overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    display: flex;
-    justify-content: flex-start; /* Align to the left */
-    align-items: flex-start; /* Align to the top */
-    height: 100%;
-    width: 100%;
-  }
-  
-  .background {
-    position: relative;
-    overflow: hidden;
-  }
-  
-  .background img {
-    width: 100%;
-    height: auto;
-  }
-  
-  .card {
-    position: fixed;
-    top: 100px; /* Adjust the top position as needed */
-    left: 20px; /* Adjust the left position as needed */
-    z-index: 1;
-    display: flex;
-    flex-direction: column;
-    width: 500px;
-    height: 500px;
-    border-radius: 50px; /* Adjust the value to control the roundness of the corners */
-    padding: 20px;
-  }
-  
-  
-  
-  .card .top {
-    flex: 1.7;
-    background-color: grey;
-    border-radius: 50px 50px 0 0;
-    text-align: left;
-    font-family: poppins;
-    font-size:45px;
-    padding-left: 40px;
-    padding-top: 50px;
-    font-weight: 500;
-    
-    
-    
-  }
-  
-  .card .bottom {
-    flex: 4;
-    background-color: white;
-    border-radius: 0 0 50px 50px;
-    font-family: poppins;
-    font-size:30px;
-    padding-top: 20px;
-    padding-left: 20px;
-    padding-right: 20px;
-  }
-  .card .bottomlast{
-    font-size: 20px;
-    padding-top: 20px;
-    padding-left: 20px;
-    padding-right: 20px;
-  }
+  /* position: absolute; */
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: flex-start; /* Align to the left */
+  align-items: flex-start; /* Align to the top */
+  height: 100%;
+  width: 100%;
+}
+
+.background {
+  position: relative;
+  overflow: hidden;
+}
+
+.background img {
+  width: 100%;
+  height: auto;
+}
+
+.card {
+  /* position: fixed; */
+  top: 100px; /* Adjust the top position as needed */
+  left: 20px; /* Adjust the left position as needed */
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  width: 500px;
+  height: 500px;
+  border-radius: 50px; /* Adjust the value to control the roundness of the corners */
+  padding: 20px;
+}
+
+.card .top {
+  flex: 1.7;
+  background-color: grey;
+  border-radius: 50px 50px 0 0;
+  text-align: left;
+  font-family: poppins;
+  font-size: 45px;
+  padding-left: 40px;
+  padding-top: 50px;
+  font-weight: 500;
+}
+
+.card .bottom {
+  flex: 4;
+  background-color: white;
+  border-radius: 0 0 50px 50px;
+  font-family: poppins;
+  font-size: 30px;
+  padding-top: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+.card .bottomlast {
+  font-size: 20px;
+  padding-top: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+.bg-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  object-fit: contain;
+}
