--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,170 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.home {
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+  gap: 100px;
+}
+.rider-details {
+  background: #fff;
+  border-radius: 4px;
+  margin: 20px auto;
+  padding: 20px;
+  position: relative;
+  box-shadow: 2px 2px 5px rgba(0,0,0,0.05);
+}
+.rider-details h4 {
+  margin: 0 0 10px 0;
+  font-size: 1.2em;
+  color: var(--primary);
+}
+.rider-details p {
+  margin: 0;
+  font-size: 0.9em;
+  color: #555;
+}
+.rider-details span {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  cursor: pointer;
+  background: #f1f1f1;
+  padding: 6px;
+  border-radius: 50%;
+  color: #333;
+}
+.create {
+  max-width: 1600px;
+  margin: 20px auto; /* Adjust margin to add space around the form */
+  padding: 20px;
+  border: 1px solid #ffffff;
+  border-radius: 10px;
+  background-color: #f9f9f9;
+}
+
+
+.create h3 {
+  margin-bottom: 20px;
+}
+
+.create label {
+  display: block;
+  margin-bottom: 5px;
+  font-weight: bold;
+}
+
+.create input {
+  width: 75%;
+  padding: 10px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.create button {
+  display: block;
+  align-items: center;
+  width: 50%;
+  height: 50%;
+  padding: 10px;
+  border: none;
+  border-radius: 15px;
+  background-color: #3498db;
+  color: white;
+  font-size: 16px;
+  cursor: pointer;
+  margin: 0 auto; /* Center align the button */
+}
+
+
+.create button:hover {
+  background-color: #2980b9;
+}
+
+.error {
+  color: red;
+  margin-top: 10px;
+  font-size: 14px;
+}
+.input-group {
+  display: flex;
+  flex-direction: column-reverse;
+  margin-bottom: 20px;
+}
+
+.input-group input {
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  margin-bottom: 5px;
+}
+
+.input-group label {
+  font-weight: bold;
+}
+label, input {
+  display: block;
+}
+input {
+  padding: 10px;
+  margin-top: 10px;
+  margin-bottom: 20px;
+  width: 100%;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+form button {
+  background: var(--primary);
+  border: 0;
+  color: #fff;
+  padding: 10px;
+  font-family: "Poppins";
+  border-radius: 4px;
+  cursor: pointer;
+}
+div.error {
+  padding: 10px;
+  background: #ffefef;
+  border: 1px solid var(--error);
+  color: var(--error);
+  border-radius: 4px;
+  margin: 20px 0;
+}
+.admin-container {
+  display: flex;
+  justify-content: flex-end;
+  padding: 20px;
+}
+
+
+.image-container {
+  flex: 1;
+}
+
+.image {
+  width: 100%;
+  height: auto;
+}
+
+.createAdmin {
+  flex: 1;
+  padding: 20px;
+  background-color: #f5f5f5;
+}
+.admin-container button {
+  display: block;
+  align-items: center;
+  width: 200px;
+  height: 50px;
+  padding: 10px;
+  border: none;
+  border-radius: 15px;
+  background-color: #3498db;
+  color: white;
+  font-size: 16px;
+  cursor: pointer;
+  margin: 0 auto; /* Center align the button */
+}
+
